StackMapGenerator appends detailed debug info about corrupted bytecode in case of an error - previous debug logging and TRACE and DEBUG switches have been removed